--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,14 +1,39 @@
-<!-- Banner -->
-<section class="banner {{ .style }}">
+<section class="banner style1 orient-left content-align-justify image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+
     <div class="content">
-        {{ with .title }}<h1>{{ . }}</h1>{{ end }}
-        {{ with .subtitle }}<p class="major">{{ . | safeHTML }}</p>{{ end }}
-        {{ with .content }}<p>{{ . | safeHTML }}</p>{{ end }}
-        {{ with .button }}<ul class="actions stacked">
-            <li><a href="{{ .link }}" class="button primary large wide smooth-scroll-middle">{{ .label }}</a></li>
-        </ul>{{ end }}
+
+        <!-- Title -->
+        <h1>{{ .title }}</h1>
+        <!-- Title -->
+
+
+        <!-- Subtitle -->
+        {{ with .subtitle }}
+        <p class="major">{{ . }}</p>
+        {{ end }}
+        <!-- Subtitle -->
+
+
+        <!-- Description -->
+        <p>{{ .description | safeHTML }}</p>
+        <!-- Description -->
+
+
+        <!-- Button -->
+        <ul class="actions stacked">
+            <li>
+                <a href="#spotlight-0" class="button large wide smooth-scroll-middle">{{ i18n "button_banner_begin" }}</a>
+            </li>
+        </ul>
+        <!-- Button -->
+
     </div>
-    {{ with .image }}<div class="image">
-        <img src="{{.}}" alt="Hugo Story" />
-    </div>{{end}}
+
+
+    <!-- Cover -->
+    <div class="image">
+        <img src="{{ .cover_image }}" alt="" fetchpriority="high" />
+    </div>
+    <!-- Cover -->
+
 </section>
