custom assets for mobile view added

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,10 +10,10 @@
 	
 	<!-- CSS -->
 	{{ if hugo.IsServer }}
-	{{ $style := resources.Get "sass/main.scss" | resources.ExecuteAsTemplate "scss/main.scss" . | toCSS (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" false) }}
+	{{ $style := slice (resources.Get "sass/main.scss") (resources.Get "sass/mobile.scss") | resources.Concat "sass/main.scss" | resources.ExecuteAsTemplate "scss/main.scss" . | toCSS (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" false) }}
 	<link rel="stylesheet" href="{{ ($style).RelPermalink }}">
 	{{ else }}
-	{{ $style := resources.Get "sass/main.scss" | resources.ExecuteAsTemplate "scss/main.scss" . | toCSS (dict "targetPath" "css/main.css" "enableSourceMap" false) }}
+	{{ $style := slice (resources.Get "sass/main.scss") (resources.Get "sass/mobile.scss") | resources.Concat "sass/main.scss" | resources.ExecuteAsTemplate "scss/main.scss" . | toCSS (dict "targetPath" "css/main.css" "enableSourceMap" false) }}
 	<link rel="stylesheet" href="{{ ($style | minify).RelPermalink }}">
 	{{ end }}
 	{{ if hugo.IsServer }}
