--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,24 +1,28 @@
 <!DOCTYPE HTML>
-<!--
-	Hugo Story by CaressOfSteel
-	A (modular, highly tweakable) responsive one-page theme for Hugo.
-	Ported from Story by HTML5UP.
-	This Hugo theme is licensed under the Creative Commons Attribution 3.0 License.
--->
-<html>
-	
-	{{ partial "head" . }}
 
-	<body class="is-preload">
+<html lang="{{ .Site.Language.LanguageCode }}">
 
-		<!-- Wrapper -->
-		<div id="wrapper" class="divided">
-            {{- block "main" . }}{{- end }}
-		<!-- Wrapper -->
-		</div>
-		
-		{{ template "_internal/google_analytics.html" . }}
-		{{ partial "scripts" . }}
+{{ partial "head" . }}
 
-	</body>
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper" class="divided">
+		{{- block "main" . }}
+		{{- end }}
+	</div>
+	<!-- Wrapper -->
+
+
+	<!-- Google Analytics -->
+	{{ template "_internal/google_analytics.html" . }}
+	<!-- Google Analytics -->
+
+
+	<!-- Scripts -->
+	{{ partial "scripts" . }}
+	<!-- Scripts -->
+
+</body>
+
 </html>
