--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,20 +7,20 @@
 	{{ if .Site.Params.favicon }}
 	{{ partial "favicon" }}
 	{{ end }}
-	
+
+	{{ template "_internal/opengraph.html" . }}
+
 	<!-- CSS -->
-	{{ if hugo.IsServer }}
-	{{ $style := slice (resources.Get "sass/main.scss") (resources.Get "sass/mobile.scss") | resources.Concat "sass/main.scss" | resources.ExecuteAsTemplate "scss/main.scss" . | toCSS (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" false) }}
+	{{ $style := slice (resources.Get "sass/main.scss") (resources.Get "sass/mobile.scss") | resources.Concat "sass/main.scss" | resources.ExecuteAsTemplate "scss/main.scss"	. | toCSS (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" false) }}
+
 	<link rel="stylesheet" href="{{ ($style).RelPermalink }}">
-	{{ else }}
-	{{ $style := slice (resources.Get "sass/main.scss") (resources.Get "sass/mobile.scss") | resources.Concat "sass/main.scss" | resources.ExecuteAsTemplate "scss/main.scss" . | toCSS (dict "targetPath" "css/main.css" "enableSourceMap" false) }}
-	<link rel="stylesheet" href="{{ ($style | minify).RelPermalink }}">
-	{{ end }}
-	{{ if hugo.IsServer }}
-	{{ $noscript := resources.Get "sass/noscript.scss" | resources.ExecuteAsTemplate "noscript.scss" . | toCSS (dict "targetPath" "css/noscript.css" "enableSourceMap" false) }}
-	<noscript><link rel="stylesheet" href="{{ ($noscript).RelPermalink }}" /></noscript>
-	{{ else }}
-	{{ $noscript := resources.Get "sass/noscript.scss" | resources.ExecuteAsTemplate "noscript.scss" . | toCSS (dict "targetPath" "css/noscript.css" "enableSourceMap" false) }}
-	<noscript><link rel="stylesheet" href="{{ ($noscript | minify).RelPermalink }}" /></noscript>
-	{{end}}
+
+
+	{{ $noscript := resources.Get "sass/noscript.scss" | resources.ExecuteAsTemplate "noscript.scss" .                                                                            | toCSS (dict "targetPath" "css/noscript.css" "enableSourceMap" false) }}
+
+	<noscript>
+		<link rel="stylesheet" href="{{ ($noscript | minify).RelPermalink }}" />
+	</noscript>
+	<!-- CSS -->
+
 </head>
