--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
 	<title>{{ .Site.Title }}</title>
 	{{ template "_internal/opengraph.html" . }}
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 	<meta name="description" content="">
 	<meta name="author" content="">
 	{{ if .Site.Params.favicon }}
